--- a/stub/res/values-pt-rBR/strings.xml
+++ b/stub/res/values-pt-rBR/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- App Name  -->
-    <string name="app_name">Temas da Arrow</string>
+    <string name="app_name">Temas da Fulia</string>
     <!-- Color section -->
     <string name="bundle1_color_name">Carbono</string>
     <string name="bundle2_color_name">Papel</string>
