--- a/stub/res/values-uk/strings.xml
+++ b/stub/res/values-uk/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- App Name  -->
-    <string name="app_name">Теми Arrow</string>
+    <string name="app_name">Теми Fulia</string>
     <!-- Color section -->
     <string name="bundle1_color_name">Карбон</string>
     <string name="bundle2_color_name">Папір</string>
